refactor(tictactoe): fix types

--- a/contrib/wild_wyss/src/sequence/examples/tictactoe/TicTacToe.html
+++ b/contrib/wild_wyss/src/sequence/examples/tictactoe/TicTacToe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Grid mit Buttons</title>
+  <title>Tic Tac Toe</title>
   <style>
       #grid-container {
           display: grid;
@@ -12,20 +12,12 @@
           height: 300px;
       }
 
-      .grid-item {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          background-color: #e0e0e0;
-      }
-
       .fill-button {
           width: 100%;
           height: 100%;
           padding: 10px;
           font-size: 16px;
       }
-
   </style>
 </head>
 <body>
